--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,6 @@
-exportPattern("^[[:alpha:]]+")
+export("PackageForCoursera")
+
+import(dplyr)
+importFrom("readr", "read_csv")
+importFrom("tidyr", "spread")
+
