--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,22 @@ Package: PackageForCoursera
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Depends:  R (>= 3.0.0)
+Depends:
+    R (>= 3.0.0)
 Author: George Pipis
 Maintainer: George Pipis <sergiopit5@hotmail.com>
-Description: This is for an example package for Coursera purposes
-    This is for an example package for Coursera purposes in order to get familiar of hwo to create R packages
+Description: This is for an example package for Coursera purposes This is for an
+    example package for Coursera purposes in order to get familiar of hwo to create
+    R packages
 License: GPL (>= 2)
+Imports:
+    dplyr (>= 0.5.0),
+    mapdata (>= 2.2-6),
+    maps (>= 3.1.1),
+    magrittr (>= 1.5),
+    readr (>= 1.0.0),
+    tidyr (>= 0.6.0),
+    tibble (>= 1.2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
