--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ export(fars_read)
 export(fars_read_years)
 export(fars_summarize_years)
 export(make_filename)
-importFrom("dplyr,","bind_rows,")
-importFrom("dplyr,","group_by,")
-importFrom("dplyr,","select,")
-importFrom("dplyr,",mutate)
-importFrom("dplyr,",summarize)
-importFrom("dplyr,",tbl_df)
-importFrom("dplyr,filter",)
-importFrom("maps,",map)
-importFrom("readr,",read_csv)
-importFrom("tidyr,",spread)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(dplyr,tbl_df)
+importFrom(maps,map)
+importFrom(readr,read_csv)
+importFrom(tidyr,spread)
