--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,14 @@ Description: This is for an example package for Coursera purposes This is for an
     example package for Coursera purposes in order to get familiar of hwo to create
     R packages
 License: GPL (>= 2)
-
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
+Imports: dplyr,
+         maps,
+         readr,
+         tidyr
+Suggests: knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
