--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,22 @@
 Package: PackageForCoursera
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Summarise and plot FARS data
 Version: 0.1.0
-Depends:
-    R (>= 3.0.0)
-Author: George Pipis
-Maintainer: George Pipis <sergiopit5@hotmail.com>
-Description: This is for an example package for Coursera purposes This is for an
-    example package for Coursera purposes in order to get familiar of hwo to create
-    R packages
-License: GPL (>= 2)
+Author: GP
+Maintainer: GP <yourself@somewhere.net>
+Description: Read in, summarise and plot data of the US National Highway 
+    Traffic Safety Administration's Fatality Analysis Reporting System.
+License: GPL
 Encoding: UTF-8
 LazyData: true
+Suggests:
+    testthat,
+    maps,
+    readr,
+    tidyr,
+    knitr,
+    rmarkdown
+Depends:
+    dplyr
 RoxygenNote: 5.0.1
-Imports: dplyr,
-         maps,
-         readr,
-         tidyr
-Suggests: knitr,
-    rmarkdown,
-    testthat
 VignetteBuilder: knitr
