--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,17 +6,19 @@ Author: GP
 Maintainer: GP <yourself@somewhere.net>
 Description: Read in, summarise and plot data of the US National Highway 
     Traffic Safety Administration's Fatality Analysis Reporting System.
-License: GPL
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Suggests:
-    testthat,
-    maps,
-    readr,
-    tidyr,
-    knitr,
-    rmarkdown
-Depends:
-    dplyr
 RoxygenNote: 5.0.1
+Imports:
+    dplyr (>= 0.5.0),
+    mapdata (>= 2.2-6),
+    maps (>= 3.1.1), 
+    magrittr (>= 1.5),
+    readr (>= 1.0.0), 
+    tidyr (>= 0.6.0),
+    tibble (>= 1.2)
+Suggests: knitr,
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
